2011-09-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1898/cpukit
	* score/include/rtems/score/percpu.h: Use CPU_STRUCTURE_ALIGNMENT for
	_Per_CPU_Information.

2011-09-11	Petr Benes <benesp16@fel.cvut.cz>

	PR 1896/cpukit
	* sapi/include/confdefs.h, score/Makefile.am, score/preinstall.am: Add
	Earliest Deadline First (EDF) Scheduling Algorithm implementation.
	* score/include/rtems/score/scheduleredf.h, score/src/scheduleredf.c,
	score/src/scheduleredfallocate.c, score/src/scheduleredfblock.c,
	score/src/scheduleredfenqueue.c,
	score/src/scheduleredfenqueuefirst.c,
	score/src/scheduleredfextract.c, score/src/scheduleredffree.c,
	score/src/scheduleredfprioritycompare.c,
	score/src/scheduleredfreleasejob.c, score/src/scheduleredfschedule.c,
	score/src/scheduleredfunblock.c, score/src/scheduleredfupdate.c,
	score/src/scheduleredfyield.c: New files.

2011-09-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1901/cpukit
	* score/src/threadhandler.c: Do not use internal tasks for global
	initialization in MP configuration.

2011-09-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1844/cpukit
	* rtems/include/rtems/rtems/msgmp.h: Define
	MESSAGE_QUEUE_MP_PACKET_SIZE.
	* rtems/src/msgmp.c, rtems/src/msgqcreate.c: Use
	MESSAGE_QUEUE_MP_PACKET_SIZE.

2011-09-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1873/cpukit
	* score/include/rtems/score/heap.h: Revert previous commit.
	* sapi/include/confdefs.h: Use proper constants in
	_Configure_From_workspace().

2011-09-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/include/rtems/score/basedefs.h: Typo.
	* score/src/mpci.c, rtems/src/eventmp.c, rtems/src/msgmp.c,
	rtems/src/partmp.c, rtems/src/regionmp.c, rtems/src/semmp.c,
	rtems/src/signalmp.c, rtems/src/taskmp.c: Use RTEMS_STATIC_ASSERT() to
	ensure that the packet size is small enough.

2011-09-02	Sebastian Huber <sebastian.huber@embedded-brains.de>
