@@ -19,10 +19,21 @@
 #ifndef __RTEMS_CPUUSE_h
 #define __RTEMS_CPUUSE_h
 
+#include <rtems.h>
 #include <rtems/bspIo.h>
+
+#ifndef __RTEMS_USE_TICKS_FOR_STATISTICS__
+  #include <rtems/score/timestamp.h>
+#endif
 
 #ifdef __cplusplus
 extern "C" {
+#endif
+
+#ifndef __RTEMS_USE_TICKS_FOR_STATISTICS__
+  extern Timestamp_Control  CPU_usage_Uptime_at_last_reset;
+#else
+  extern uint32_t           CPU_usage_Ticks_at_last_reset;
 #endif
 
 /*
